# cdp-protocol

./: .editorconfig  .gitignore  BLOG.md  Blog.md  CDP_KNOWLEDGE.md  Cargo.toml  README.md  justfile
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  integration.yml  node-bindings.yml
bindings/node/: .gitignore  Cargo.toml  README.md  package.json  test.mjs
bindings/node/examples/: cluster.mjs  industrial.mjs
crates/cdp-protocol/: Cargo.toml  LICENSE  README.md
crates/cdp-protocol-node/: .gitignore  Cargo.toml  README.md  load-test.mjs  package-lock.json  package.json  version-check.mjs
crates/cdp-protocol-node/examples/: agent.mjs  basic.mjs
crates/cdp-protocol-node/src/: lib.rs
crates/cdp-protocol/examples/: agent.rs  basic.rs  cluster.rs  industrial.rs
crates/cdp-protocol/examples/common/: logging.rs
crates/cdp-protocol/src/: agent.rs  blocking.rs  client.rs  cluster.rs  config.rs  error.rs  lib.rs  network.rs  page.rs  types.rs
crates/cdp-protocol/tests/: integration.rs  unit.rs
examples/: agent.rs  basic.rs  cluster.rs  industrial.rs
src/: agent.rs  blocking.rs  client.rs  config.rs  error.rs  lib.rs  network.rs  types.rs
