[package]
name = "cdp-protocol-node"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Node/Deno/Bun bindings for cdp-driver (Chrome DevTools Protocol client)"

[lib]
crate-type = ["cdylib"]

[dependencies]
cdp-driver = { path = "../cdp-protocol" }
napi = { version = "3", default-features = false, features = ["napi6", "async", "serde-json"] }
napi-derive = "3"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[build-dependencies]
napi-build = "2"
