[package]
name = "cdp-driver"
version = "0.2.0"
edition = "2021"
description = "Chrome DevTools Protocol client for AI agent browser control"
authors = ["Rakibul Yeasin <ryeasin03@gmail.com>"]
license = "MIT"
repository = "https://github.com/dreygur/cdp-protocol"

[features]
blocking = []

[[example]]
name = "basic"

[[example]]
name = "agent"

[[example]]
name = "industrial"

[[example]]
name = "cluster"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
